Update Maven configuration to set main class for JAR packaging

--- a/src/main/resources/MessagesBundle_en_US.properties
+++ b/src/main/resources/MessagesBundle_en_US.properties
@@ -1,4 +1,4 @@
-amountOfItems= Enter the number of items to purchase:
+prompt.Item= Enter the number of items to purchase:
 Price= Enter the price for item:
 quantity= Enter the quantity for item:
 totalCost= Total cost:
